TestSuite/PascalABCTests/errors/err0050.pas
procedure Test(var a : integer := 1);
begin
end;
    
begin

end.